# antelope-rs

./: Cargo.toml  README.md
.github/workflows/: on_pull_request.yml  on_push.yml
crates/antelope/: Cargo.toml
crates/antelope/src/: base58.rs  lib.rs  util.rs
crates/antelope/src/api/: client.rs  default_provider.rs  mod.rs  util.rs
crates/antelope/src/api/system/: mod.rs  structs.rs
crates/antelope/src/api/v1/: chain.rs  mod.rs  structs.rs  utils.rs
crates/antelope/src/chain/: abi.rs  action.rs  asset.rs  authority.rs  binary_extension.rs  blob.rs  block_id.rs  checksum.rs  integer.rs  key_type.rs  mod.rs  name.rs  permission_level.rs  private_key.rs  public_key.rs  signature.rs  time.rs  transaction.rs  varint.rs
crates/antelope/src/crypto/: curves.rs  generate.rs  get_public.rs  hmac_drbg_rng.rs  recover.rs  shared_secrets.rs  sign.rs  verify.rs
crates/antelope/src/serializer/: encoder.rs  formatter.rs  mod.rs  packer.rs  serializer.rs
crates/antelope/tests/: base58.rs  chain.rs  client.rs  contract.wasm  crypto.rs  integer.rs  mock_provider.rs  mod.rs  serializer.rs  ship.rs  test_bytes.rs  typestresser.abi.json
crates/antelope/tests/utils/: mock_provider.rs  mod.rs  ship_types.rs
crates/antelope_macros/: Cargo.toml  lib.rs
crates/macros/: Cargo.toml  README.md  lib.rs
src/: base58.rs  encoder.rs  lib.rs  util.rs
src/chain/: blob.rs  bytes.rs  integer.rs  key_type.rs  mod.rs  name.rs  permission-level.rs  permission_level.rs  private_key.rs  public_key.rs  signature.rs  string.rs
src/crypto/: curves.rs  generate.rs  get_public.rs  mod.rs  recover.rs  sign.rs  verify.rs
src/serializer/: encoder.rs  mod.rs  serializable.rs
src/types/: mod.rs  name.rs  uint64.rs
tests/: base58.rs  chain.rs  crypto.rs  integer.rs  mod.rs  name.rs  serializer.rs  string.rs  uint64.rs
