[package]
name = "antelope-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
base64 = "0.13"
bs58 = "0.5.0"
ecdsa = { version = "0.16.9", features = ["std"] }
hex = "0.4.3"
k256 = "0.13.2"
once_cell = "1.18.0"
p256 = "0.13.2"
rand = "0.8.5"
regex = "1.10.2"
ripemd = "0.1.3"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
sha2 = "0.10.8"
