[workspace]
resolver = "2"
members = [
    "crates/antelope",
    "crates/macros",
]

[workspace.package]
version = "0.1.7"
edition = "2021"
rust-version = "1.75"
authors = ["Jesse Schulman <jesse@telos.net>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/telosnetwork/antelope-rs"
repository = "https://github.com/telosnetwork/antelope-rs"
keywords = ["blockchain", "antelope"]
categories = ["cryptography::cryptocurrencies", "encoding"]