[package]
name = "antelope"
version = "0.1.0"
edition = "2021"
include = ["Cargo.toml", "src/**/*.rs", "tests/**/*.rs", "README.md", "LICENSE"]


[lib]
name = "antelope"

[dependencies]
log = "0.4.14"
antelope_macros = { version = "0.1.0", path = "../antelope_macros" }
base64 = "0.13"
bs58 = "0.5.0"
ecdsa = { version = "0.16.9", features = ["std"] }
hex = "0.4.3"
k256 = {  version = "0.13.2", features = ["ecdh", "ecdsa"] }
once_cell = "1.18.0"
p256 = {  version = "0.13.2", features = ["ecdh", "ecdsa"] }
rand = "0.8.5"
regex = "1.10.2"
ripemd = "0.1.3"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
sha2 = "0.10.8"
signature = { version = "2.2.0", features = [] }
digest = { version = "0.10.7", features = [] }
rust-chain = "0.2.8"
