[package]
name = "antelope"
version = "0.1.0"
edition = "2021"
include = ["Cargo.toml", "src/**/*.rs", "tests/**/*.rs", "README.md", "LICENSE"]


[lib]
name = "antelope"

[dependencies]
log = "0.4.14"
antelope_macros = { version = "0.1.0", path = "../antelope_macros" }
base64 = "0.21.5"
bs58 = "0.5.0"
ecdsa = { version = "0.16.9", features = ["std", "rfc6979", "arithmetic", "signing"] }
hex = "0.4.3"
k256 = {  version = "0.13.2", features = ["ecdh", "ecdsa"] }
once_cell = "1.18.0"
p256 = {  version = "0.13.2", features = ["ecdh", "ecdsa"] }
rand = "0.8.5"
regex = "1.10.2"
ripemd = "0.1.3"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
sha2 = "0.10.8"
signature = { version = "2.2.0", features = ["rand_core"] }
digest = { version = "0.10.7", features = [] }
reqwest = { version = "0.11.22", features = ["json", "blocking"] }
tokio = { version = "1.35.0", features = ["full"] }
chrono = "0.4.31"
flate2 = "1.0"
hmac = "0.12.1"
rand_core = "0.6.4"
hmac-drbg = { git = "https://github.com/poplexity/rust-hmac-drbg.git", branch = "topic/deps-update-2" }

#[dependencies.digest_old]
#version = "0.9"
#package = "digest"
#
#[dependencies.hmac_old]
#version = "0.9"
#package = "hmac"
#
#[dependencies.sha2_old]
#version  = "0.9"
#package = "sha2"