[package]
name = "antelope-client"
description = "Rust client for Antelope blockchains"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

readme = "../../README.md"
exclude = ["tests"]

[lib]
name = "antelope"

[dependencies]
antelope-client-macros = "0.1.0"

log = "0.4.14"
base64 = "0.21.5"
bs58 = "0.5.0"
ecdsa = { version = "0.16.9", features = ["std", "rfc6979", "arithmetic", "signing"] }
hex = "0.4.3"
k256 = {  version = "0.13.2", features = ["ecdh", "ecdsa"] }
once_cell = "1.18.0"
p256 = {  version = "0.13.2", features = ["ecdh", "ecdsa"] }
rand = "0.8.5"
ripemd = "0.1.3"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
sha2 = "0.10.8"
signature = { version = "2.2.0", features = ["rand_core"] }
digest = { version = "0.10.7", features = [] }
reqwest = { version = "0.11.22", features = ["json", "blocking"] }
tokio = { version = "1.35.0", features = ["full"] }
chrono = "0.4.31"
flate2 = "1.0"
hmac = "0.12.1"
rand_core = "0.6.4"