[package]
name = "antelope_macros"
description = "A proc-macro crate for StructPacker"
version = "0.1.0"

edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
path = "lib.rs"
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"