[package]
name = "antelope-client-macros"
description = "A proc-macro crate for EnumPacker & StructPacke"
version = "0.1.0"
documentation = ""

edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
path = "lib.rs"
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"